feat(JWTUtils): Update and implement jwt utils

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,10 @@ springdoc.api-docs.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
 
 # JWT Configuration
-jwt.access-token-secret-key=${JWT_ACCESS_TOKEN_SECRET_KEY}
+jwt.access-token-secret-key=${JWT_ACCESS_TOKEN_SECRET_KEY:FyJMrt9Y46WJwJaIjZodYDLEeIsDEk3l}
 jwt.access-token-expiration-in-ms=3600000
+jwt.refresh-token-secret-key=${JWT_REFRESH_TOKEN_SECRET_KEY:MTJaWM6u05CrEUEDoPuuOq4CP7hhPr6E}
+jwt.refresh-token-expiration-in-ms=86400000
 
 # Jackson Configuration
 spring.jackson.property-naming-strategy=SNAKE_CASE
